2010-06-11  Luiz Agostini  <luiz.agostini@openbossa.org>, Kenneth Rohde Christiansen <kenneth@webkit.org>

Reviewed by Antti Koivisto.

        CSS3 Media Queries are not serialized according to CSSOM
        https://bugs.webkit.org/show_bug.cgi?id=39220

        Added test for testing the serialization, plus updated current
        tests to take serialization into account.

        * fast/css/insertRule-media-expected.txt:
        * fast/css/insertRule-media.html:
        * fast/css/resources/insertRule-media.js:
        * fast/media/media-query-serialization-expected.txt: Added.
        * fast/media/media-query-serialization.html: Added.
2010-06-11  Luiz Agostini  <luiz.agostini@openbossa.org>

        Reviewed by Antti Koivisto.

        CSS3 Media Queries are not serialized according to CSSOM
        https://bugs.webkit.org/show_bug.cgi?id=39220

        MediaQuery serialization according to specification
        http://dev.w3.org/csswg/cssom/#serializing-media-queries.

        MediaQuery objects now ignore duplicated expressions. MediaQueryEvaluator::eval()
        now does not proccess MediaQuery objects that are known to be invalid.

        Test: fast/media/media-query-serialization.html

        * css/MediaQuery.cpp:
        (WebCore::stringCompare):
        (WebCore::MediaQuery::serialize):
        (WebCore::MediaQuery::MediaQuery):
        (WebCore::MediaQuery::~MediaQuery):
        (WebCore::MediaQuery::operator==):
        (WebCore::MediaQuery::cssText):
        (WebCore::MediaQuery::append):
        * css/MediaQuery.h:
        (WebCore::MediaQuery::ignored):
        (WebCore::MediaQuery::begin):
        (WebCore::MediaQuery::end):
        * css/MediaQueryExp.cpp:
        (WebCore::MediaQueryExp::serialize):
        * css/MediaQueryExp.h:
        * css/MediaQueryEvaluator.cpp:
        (WebCore::MediaQueryEvaluator::eval):

Canonical link: https://commits.webkit.org/52031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61016 268f45cc-cd09-0410-ab3c-d52691b4dbfc