WebCore/css/MediaQuery.h
@@ -2,6 +2,7 @@
  * CSS Media Query
  *
  * Copyright (C) 2006 Kimmo Kinnunen <kimmo.t.kinnunen@nokia.com>.
+ * Copyright (C) 2010 Nokia Corporation and/or its subsidiary(-ies).
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -29,7 +30,9 @@
 #define MediaQuery_h
 
 #include "PlatformString.h"
+#include <wtf/PassOwnPtr.h>
 #include <wtf/Vector.h>
+#include <wtf/text/StringHash.h>
 
 namespace WebCore {
 class MediaQueryExp;
@@ -40,20 +43,24 @@ public:
         Only, Not, None
     };
 
-    MediaQuery(Restrictor r, const String& mediaType, Vector<MediaQueryExp*>* exprs);
+    MediaQuery(Restrictor r, const String& mediaType, PassOwnPtr<Vector<MediaQueryExp*> > exprs);
     ~MediaQuery();
 
     Restrictor restrictor() const { return m_restrictor; }
     const Vector<MediaQueryExp*>* expressions() const { return m_expressions; }
     String mediaType() const { return m_mediaType; }
     bool operator==(const MediaQuery& other) const;
-    void append(MediaQueryExp* newExp) { m_expressions->append(newExp); }
     String cssText() const;
+    bool ignored() const { return m_ignored; }
 
  private:
     Restrictor m_restrictor;
     String m_mediaType;
     Vector<MediaQueryExp*>* m_expressions;
+    bool m_ignored;
+    String m_serializationCache;
+
+    String serialize() const;
 };
 
 } // namespace
